[package]
name = "spooky-m5stack-core2"
version = "0.10.0"
authors = ["Juraj Michálek <juraj.michalek@gmail.com>"]
edition = "2021"
license = "MIT"

[target.xtensa-esp32-none-elf.dependencies]
hal = { package = "esp32-hal", version = "0.17.0" }
esp-backtrace = { version = "0.9.0", features = [
    "esp32",
    "panic-handler",
    "print-uart",
] }

[dependencies]
embedded-graphics = "0.8.0"
embedded-graphics-framebuf = { version = "0.3.0", git = "https://github.com/georgik/embedded-graphics-framebuf.git", branch = "feature/embedded-graphics-0.8" }
embedded-hal = "0.2"
display-interface = "0.4"
display-interface-spi = "0.4"
mpu9250 = { version = "0.25.0", default-features = false, features = [
    "i2c",
], optional = true }
mpu6050 = { version = "0.1.6", optional = true }
mpu6886 = { version = "0.1.0", optional = true }
mipidsi = "0.7.1"
panic-halt = "0.2"
shared-bus = { version = "0.3.0" }
spooky-core = { path = "../spooky-core", default-features = false, features = [
    "static_maze",
] }
spooky-embedded = { path = "../spooky-embedded", default-features = false, features = [ "esp32", "static_maze", "resolution_320x240", "mpu6886" ] }
esp-println = { version = "0.7.0", features = [ "esp32", "log" ] }
log = { version = "0.4.18" }
axp192 = { version = "0.1.1" }
spi-dma-displayinterface = { path = "../spi-dma-displayinterface", features = [ "esp32" ] }

[features]
default = [ "mpu6886" ]
mpu6050 = ["dep:mpu6050"]
mpu6886 = ["dep:mpu6886"]
mpu9250 = ["dep:mpu9250"]