[package]
name = "spooky-m5stack-cores3"
version = "0.6.0"
authors = ["Juraj Michálek <juraj.michalek@gmail.com>"]
edition = "2021"
license = "MIT"

[target.xtensa-esp32s3-none-elf.dependencies]
xtensa-atomic-emulation-trap = "0.4.0"
hal = { package = "esp32s3-hal", version = "0.12.0" }
esp-backtrace = { version = "0.8.0", features = [
    "esp32s3",
    "panic-handler",
    "print-uart",
] }

[dependencies]
embedded-graphics = "0.8.0"
embedded-graphics-framebuf = { version = "0.3.0", git = "https://github.com/georgik/embedded-graphics-framebuf.git", branch = "feature/embedded-graphics-0.8" }
embedded-hal = "0.2"
log = { version = "0.4.18" }
display-interface = "0.4"
display-interface-spi = "0.4"
mpu9250 = { version = "0.25.0", default-features = false, features = [
    "i2c",
], optional = true }
mpu6050 = { version = "0.1.6", optional = true }
mpu6886 = { version = "0.1.0", optional = true }
mipidsi = "0.7.1"
panic-halt = "0.2"
shared-bus = { version = "0.3.0" }
spooky-core = { path = "../spooky-core", default-features = false, features = [
    "static_maze",
] }
heapless = { version = "0.7.14", default-features = false }
esp-println = { version = "0.6.0", features = [ "esp32s3" ] }
#axp192 = { git = "https://github.com/georgik/axp192-rs.git", rev = "80e4fd27dfab", optional = true }
axp2101 = { path = "../../axp2101-rs", optional = true }

[features]
default = ["m5stack_cores3"]
system_timer = []

i2c = []

button_controls = []
imu_controls = [ "i2c" ]

esp32 = []
esp32s2 = ["system_timer"]
esp32s3 = []
esp32c3 = ["system_timer"]

mpu6050 = ["imu_controls", "dep:mpu6050"]
mpu6886 = ["imu_controls", "dep:mpu6886"]
mpu9250 = ["imu_controls", "dep:mpu9250"]

axp2101 = ["i2c", "dep:axp2101"]

m5stack_cores3 = [ "esp32s3", "mpu6886", "axp2101" ]
