[package]
name = "spooky-m5stack-fire"
version = "0.9.0"
authors = ["Juraj Michálek <juraj.michalek@gmail.com>"]
edition = "2021"
license = "MIT"

[target.xtensa-esp32-none-elf.dependencies]
xtensa-atomic-emulation-trap = "0.4.0"
hal = { package = "esp32-hal", version = "0.16.0" }
esp-backtrace = { version = "0.9.0", features = [
    "esp32",
    "panic-handler",
    "print-uart",
] }

[dependencies]
embedded-graphics = "0.8.0"
embedded-hal = "0.2"
display-interface = "0.4"
display-interface-spi = "0.4"
embedded-graphics-framebuf = { version = "0.3.0", git = "https://github.com/georgik/embedded-graphics-framebuf.git", branch = "feature/embedded-graphics-0.8" }
mpu9250 = { version = "0.25.0", default-features = false, features = [ "i2c" ] }
mipidsi = "0.7.1"
panic-halt = "0.2"
shared-bus = { version = "0.3.0" }
spooky-core = { path = "../spooky-core", default-features = false, features = [
    "static_maze",
] }
spooky-embedded = { path = "../spooky-embedded", default-features = false, features = [ "esp32", "static_maze", "resolution_320x240" ] }
spi-dma-displayinterface = { path = "../spi-dma-displayinterface", features = [ "esp32" ] }
