[package]
# Source: https://github.com/bjoernQ/rust-esp32s3-ili9341/blob/main/src/spi_dma_displayinterface.rs
name = "spi-dma-displayinterface"
version = "0.3.0"
edition = "2021"

[dependencies]
byte-slice-cast = { version = "0.3.5", default-features = false }
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.1"
embedded-hal = { version = "1.0.0" }
embedded-dma = "0.2.0"
num-traits = { version = "0.2.17", default-features = false }

esp32-hal = { version = "0.17.0", optional = true }
esp32c3-hal = { version = "0.14.0", optional = true }
esp32c6-hal = { version = "0.8.0", optional = true }
esp32s2-hal = { version = "0.14.0", optional = true }
esp32s3-hal = { version = "0.14.0", optional = true }

[features]
default = []
esp32 = [ "esp32-hal" ]
esp32c3 = [ "esp32c3-hal" ]
esp32c6 = [ "esp32c6-hal" ]
esp32s2 = [ "esp32s2-hal" ]
esp32s3 = [ "esp32s3-hal" ]

