[package]
# Source: https://github.com/bjoernQ/rust-esp32s3-ili9341/blob/main/src/spi_dma_displayinterface.rs
name = "spi-dma-displayinterface"
version = "0.3.0"
edition = "2021"

[dependencies]
byte-slice-cast = { version = "0.3.5", default-features = false }
display-interface = "0.5"
display-interface-spi = "0.5"
embedded-graphics = "0.8.0"
embedded-hal = { version = "1.0.0" }
embedded-dma = "0.2.0"
num-traits = { version = "0.2.17", default-features = false }
esp-hal = { version = "0.16"}

[features]
esp32 = ["esp-hal/esp32"]
esp32c3 = ["esp-hal/esp32c3"]
esp32c6 = ["esp-hal/esp32c6"]
esp32s2 = ["esp-hal/esp32s2"]
esp32s3 = ["esp-hal/esp32s3"]