[package]
name = "spooky-core"
version = "0.7.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "301f618", default-features = false }
bevy_transform = { git = "https://github.com/bevyengine/bevy.git", rev = "301f618", default-features = false }
bevy_math = { git = "https://github.com/bevyengine/bevy.git", rev = "301f618", default-features = false, features = ["alloc", "libm"] }
bevy_input = { git = "https://github.com/bevyengine/bevy.git", rev = "301f618", default-features = false }

#bevy = "0.16.0-rc.2"
#bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "301f618", default-features = false }
#bevy_transform = { git = "https://github.com/bevyengine/bevy.git", rev = "301f618", default-features = false }
embedded-graphics = "0.8.0"
embedded-graphics-framebuf = { version = "0.3.0", git = "https://github.com/georgik/embedded-graphics-framebuf.git", branch = "feature/embedded-graphics-0.8" }
#embedded-graphics-framebuf = "0.2.0"
tinybmp = "0.6.0"
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
petgraph = { git = "https://github.com/zendurix/petgraph.git", branch = "better_no_std", default-features = false, features = ["graphmap"], optional = true }
maze_generator = { git = "https://github.com/georgik/maze_generator", branch = "feature/no_std", default-features = false, features = [ "recursive_backtracking"], optional = true }
heapless = { version = "0.8.0", default-features = false }
log = "0.4.27"

[features]
#default = [ "dynamic_maze" ]
std = []
wasm = [ "std" ]
static_maze = []
dynamic_maze = [ "dep:petgraph", "dep:maze_generator" ]
system_timer = []

default = [ "static_maze" ]

esp32s2 = []
esp32c6 = []
