[package]
name = "spooky-embedded"
version = "0.10.0"
edition = "2021"

[dependencies]
display-interface = "0.5.0"
embedded-hal = { version = "1.0.0" }
embedded-graphics = "0.8.1"
embedded-graphics-framebuf = { version = "0.3.0", git = "https://github.com/georgik/embedded-graphics-framebuf.git", branch = "feature/embedded-graphics-0.8" }

icm42670 = { version = "0.2.0" }
#mpu6886 = { version = "0.1.0", optional = true }
mpu6886 = { version = "0.2.0", git = "https://github.com/georgik/mpu6886.git", branch = "feature/update-hal-2024-11", optional = true }
# mpu9250 = { version = "0.25.0", optional = true, default-features = false, features = [ "i2c" ] }
# shared-bus = { version = "0.3.0" }

log = { version = "0.4.18" }
mipidsi = "0.8.0"
spooky-core = { path = "../spooky-core", default-features = false}

esp-hal = { version = "0.22.0", optional = true }

[features]
default = [ "dynamic_maze", "resolution_320x240", "mpu6886" ]
# mpu9550 is not supported, due to limited implementation of I2C
# default = [ "esp32", "dynamic_maze", "resolution_320x240", "mpu9250" ]

mpu6886 = [ "dep:mpu6886" ]
# mpu9250 = [ "dep:mpu9250" ]


dynamic_maze = ["spooky-core/dynamic_maze"]
static_maze = ["spooky-core/static_maze"]

resolution_240x240 = []
resolution_320x240 = []
