[package]
name = "spooky-maze-esp32-s3-box-3"
version = "0.12.0"
authors = ["Juraj Michálek <juraj.michalek@gmail.com>"]
edition = "2024"
license = "MIT"

[dependencies]
# Disable default features for Bevy and its sub-crates so that no_std is used.
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "301f618", default-features = false }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", rev = "301f618", default-features = false }
bevy_transform = { git = "https://github.com/bevyengine/bevy.git", rev = "301f618", default-features = false }
bevy_math = { git = "https://github.com/bevyengine/bevy.git", rev = "301f618", default-features = false, features = ["alloc", "libm"] }
bevy_input = { git = "https://github.com/bevyengine/bevy.git", rev = "301f618", default-features = false }

esp-hal = { version = "1.0.0-beta.0", features = ["esp32s3", "unstable"] }
esp-backtrace = { version = "0.15.1", features = ["panic-handler", "println"] }
esp-println = { version = "0.13", features = ["log"] }
log = "0.4.27"
esp-alloc = "0.7.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
mipidsi = "0.9.0"
embedded-graphics-framebuf = "0.5.0"
heapless = "0.8.0"
embedded-hal-bus = "0.3.0"
spooky-core = { path = "../spooky-core", default-features = false }

icm42670 = { version = "0.2.0", optional = true }


[features]
default = [ "esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-println/esp32s3", "esp32-s3-box-3" ]
accelerometer = []
no-psram = []
esp32-s3-box-3 = [ "esp-hal/psram", "accelerometer", "dep:icm42670", "spooky-core/dynamic_maze" ]

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false

