[package]
name = "spooky-maze-esp32-s3-box-3"
version = "0.14.0"
authors = ["Juraj Michálek <juraj.michalek@gmail.com>"]
edition = "2024"
license = "MIT"

[dependencies]
# Disable default features for Bevy and its sub-crates so that no_std is used.
bevy_ecs = { version = "0.16.1", default-features = false }
bevy = { version = "0.16.1", default-features = false }
bevy_platform = { version = "0.16.1", default-features = false }

esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable"] }
esp-backtrace = { version = "0.18.1", features = [
    "panic-handler",
    "println"
] }
esp-println = { version = "0.16.1", features = [ "log-04" ] }
log = "0.4.27"
esp-alloc = "0.9.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
mipidsi = "0.9.0"
embedded-graphics-framebuf = "0.5.0"
embedded-hal-bus = "0.3.0"
spooky-core = { path = "../spooky-core", default-features = false }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }

icm42670 = { version = "0.2.0", optional = true }


[features]
default = [ "esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-println/esp32s3", "esp32-s3-box-3" ]
accelerometer = []
no-psram = []
esp32-s3-box-3 = [ "esp-hal/psram", "accelerometer", "dep:icm42670", "spooky-core/dynamic_maze" ]

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false

