[package]
name = "spooky-maze-m5stack-cores3"
version = "0.14.0"
authors = [
    "Juraj Michálek <juraj.michalek@gmail.com>",
    "Kris van Rens <kris@vanrens.org>"
]
edition = "2024"
license = "MIT"

[dependencies]
# Disable default features for Bevy and its sub-crates so that no_std is used.
# Note: Bevy 0.17 has an error in atomics detection which results in panic when spawning the first entity
#       Development version Bevy-0.18-dev has solved the issue, so for the time being we will use this.
#bevy = { version = "0.17.2", default-features = false }
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "906bc14", default-features = false }
#bevy_ecs = { version = "0.17.2", default-features = false }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", rev = "906bc14", default-features = false }
#bevy_platform = { version = "0.17.2", default-features = false }
bevy_platform = { git = "https://github.com/bevyengine/bevy.git", rev = "906bc14", default-features = false }


esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable"] }
esp-backtrace = { version = "0.18.1", features = [
    "panic-handler",
    "println"
] }
esp-println = { version = "0.16.1", features = [ "log-04" ] }

log = "0.4.27"
esp-alloc = "0.9.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
mipidsi = "0.9.0"
embedded-graphics-framebuf = "0.5.0"
embedded-hal-bus = "0.3.0"
spooky-core = { path = "../spooky-core", default-features = false }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
bmi2 = "0.1.1"
axp2101-embedded = "0.3"
aw9523 = { git = "https://github.com/georgik/aw9523-rs.git", tag = "v0.2.0", version = "0.1.0" }

[features]
default = [ "esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-println/esp32s3", "m5stack-cores3", "esp-hal/psram" ]
accelerometer = []
no-psram = []
m5stack-cores3 = [ "spooky-core/static_maze" ]

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false

