[package]
name = "esp32s3_box"
version = "0.1.0"
authors = ["Juraj Michalek <juraj.michalek@espressif.com>", "Samuel Benko <samuel.benko@espressif.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
embedded-graphics = "0.8.0"
embedded-graphics-framebuf = { version = "0.3.0", git = "https://github.com/georgik/embedded-graphics-framebuf.git", branch = "feature/embedded-graphics-0.8" }
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ['Window', 'Performance', 'PerformanceTiming']}
embedded-graphics-web-simulator = { version = "0.4.0", git = "https://github.com/georgik/embedded-graphics-web-simulator.git", branch = "feature/sprite" }
# embedded-graphics-web-simulator = "0.3.0"
# rand = { version = "0.8.5", default-features = false }
getrandom = { version = "0.2.8", features = ["js"] }
rand_chacha = { version = "0.3.1", default-features = false }
spooky-core = { path = "../spooky-core", default-features = false, features = [ "wasm", "static_maze" ]}

